<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="1000dp"
            android:orientation="vertical">

            <!-- book cover image -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <!-- book price and buy/save button layout -->
                <ImageView
                    android:id="@+id/bookInfoCover"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:srcCompat="@drawable/bookcover"
                    tools:layout_editor_absoluteX="266dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bookPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:text="Price: $ 100"
                    android:textSize="35sp" />

                <Button
                    android:id="@+id/buyBookButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="25dp"
                    android:text="buy" />

                <Button
                    android:id="@+id/saveBookButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="25dp"
                    android:text="Save" />

            </LinearLayout>

            <!-- book name layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="160dp"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Book Name: "
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/bookName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Book1"
                    android:textSize="30sp" />
            </LinearLayout>

            <!-- book description layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="160dp"
                android:layout_marginVertical="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Book Description: "
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/bookDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Book description"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- book author layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="160dp"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Book Author: "
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/bookAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="author name"
                    android:textSize="30sp" />
            </LinearLayout>

            <!-- book edtion layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="160dp"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Book Edition: "
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/bookEdition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.0"
                    android:textSize="30sp" />

            </LinearLayout>

            <!-- book rating bar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="160dp"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Book Rating: "
                    android:textSize="30sp" />

                <RatingBar
                    android:id="@+id/bookRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/button_blue"
                    android:rating="1" />

            </LinearLayout>

            <!-- Comments information -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="160dp"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Comments: "
                    android:textSize="30sp" />

            </LinearLayout>

            <!-- Comments information -->
            <LinearLayout
                android:id="@+id/commentsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="160dp"
                android:layout_marginVertical="15dp"
                android:orientation="vertical">

            </LinearLayout>

        <LinearLayout
            android:padding="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="160dp"
            android:layout_marginVertical="15dp"
            android:orientation="vertical"/>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/include"
        layout="@layout/header_footer_activity"
        tools:layout_editor_absoluteX="-202dp"
        tools:layout_editor_absoluteY="-40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>