...
            android:id="@+id/sortable"
            android:layout_width="211dp"
            android:layout_height="39dp"
            android:entries="@array/sort_options" />

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Please enter book name"
            android:inputType="text"
            android:padding="20dp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="10dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@color/purple"
            android:text="Search" />

...
