<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_margin="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:background="@color/light_purple">

        <!-- Home button layout -->
        <ImageView
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/home" />

        <!-- Library button layout -->
        <ImageView
            android:id="@+id/libraryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/books" />

        <!-- Profile button layout -->
        <ImageView
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/profile_picture" />

        <ImageView
            android:id="@+id/cartButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/shoppingcart" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
