...
                    android:layout_weight="50"
                    android:textColor="@color/black"
                    android:text="Transactions"
                    android:textSize="40dp" />

                <ImageView
                    android:id="@+id/viewTransactions"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_margin="0dp"
                    app:srcCompat="@drawable/right" />
            </LinearLayout>

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="logout"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/viewTransactions"
...
